# osscameroon-website

./: .gitattributes  .gitignore  README.md  conventionalCommit.json  docker-compose.yml  package.json  pubspec.yaml
.github/: CODEOWNERS  dependabot.yml
api/: .env.dist  Dockerfile  Makefile  README.md  api.ini  example.config.txt  install.sh  manage.py  pyproject.toml  requirements.txt  rest-api.sh
api/app/: __init__.py  rest.py  settings.py
api/app/main/: __init__.py  config.py
api/app/main/controller/: github_controller.py  github_users_controller.py  twitter_controller.py
api/app/main/utils/: converters.py  decorator.py  dto.py
api/app/main/utils/database/: languages.py  projects.py  search.py  search_projects.py  search_users.py  storage.py  users.py
api/app/main/utils/database/twitter/: top_tweets.py
api/app/main/utils/helpers/: cache.py  commons.py
api/app/utils/database/: search.py  storage.py  users.py
api/ossdb/projects/: export.sh  import.sh
api/ossdb/users/: export.sh  import.sh
api/tests/: test_assert.py
api/tests/app/: test_settings.py
api/tests/main/: test_github_controller.py  test_twitter_controller.py
backend/: .env.example  env.d.ts  eslint.config.mjs  jest.config.ts  package.json  tsconfig.json
frontend/: .env  .env.example  .eslintcache  .eslintignore  .eslintrc.js  .gitignore  .prettierrc  Dockerfile  README.md  jest.config.js  next-config.js  nginx-custom.conf  package-lock.json  package.json  tsconfig.json
gcloud-emulator/: Dockerfile-datastore
lib/: main.dart
mobile/: pubspec.yaml
scraper/: README.md
(+337 files in other folders)
